--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ header h3 {
 .logo {
 float: left;
 }
+.pizza {
+    margin-left: 300px;
+}
 
 header  {
-    width: 480px;
+    margin: 0px;
+    overflow: hidden;
 }
 
 header p {
@@ -23,14 +27,23 @@ float: right
 margin-bottom: 30px
 } */
 
-section {
+header section {
     float: right;
     margin-bottom: 30px;
     background-position-y: 20px;
 }
 
+body section {
+    display: inline-block;
+}
 .divider {
     display: block;
     height: 5px;
     border: 5px solid #222;
+}
+h4 {
+    margin-left: 300px;
+}
+h1 {
+    margin-left: 300px;
 }
